# windows-network-sniffer

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  run.bat
docs/: DECISIONS.md  VERIFICATION.md
sniffer/: __init__.py  analytics.py  anomaly.py  app.py  application.py  capture.py  dashboard.py  dialogs.py  filtering.py  formatting.py  gui.py  interfaces.py  models.py  offline.py  parser.py  reassembly.py  storage.py  theme.py  tls.py
tests/: test_analytics.py  test_anomaly.py  test_application.py  test_capture.py  test_filtering.py  test_formatting.py  test_gui.py  test_interfaces.py  test_offline.py  test_parser.py  test_reassembly.py  test_storage.py  test_tls.py
